luci-theme-material: fix word wrap on german i18n for username

--- a/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
+++ b/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
@@ -1611,7 +1611,7 @@ header > .container > .pull-right > * {
 }
 
 .node-main-login > .main .cbi-value-title {
-    width: 7rem;
+    width: 8rem;
 }
 
 .node-main-login > .main #maincontent {
